[package]
name = "rcalc_lib"
version = "0.9.3"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["math"]
license = "MIT"
description = "Mathematical expression calculation library"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/rclc_lib"

[dependencies]
pest = "2.0.0"
pest_derive = "2.0.0"
lazy_static = "1.0"
num-bigint = "0.2"
num-traits = "0.2"
num-rational = "0.2"
num-complex = "0.2"
dtoa = "0.4"